// Copyright 2023 The Chromium Authors
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

option go_package = "infra/libs/cipkg_new/core";

import "google/protobuf/any.proto";
import "libs/cipkg_new/core/specs.proto";

// Action is the building block for build steps. It provides a set of
// predefined verbs for common build action and will be transformed into
// derivation for actual execution.
message Action {
  // Metadata contains metadata information which won't affect the result of the
  // output.
  Metadata metadata = 1;
  message Metadata {
    // Name is required for all actions.
    // It's the name of the action's output e.g. cpython3, curl, ninja.
    string name = 1;
    // Version is an optional version for action's output.
    string version = 2;
    // CacheKey is an optional key for remote server to cache the action's
    // output.
    string cache_key = 3;
  }

  // Deps are dependencies should be available before the action being executed.
  // TODO: Maybe move dependencies into specs?
  repeated Dependency deps = 2;
  message Dependency {
    Action action = 2;
    bool runtime = 3;
  }

  // Spec is the action spec describing what action we want to perform.
  // It can be extended using extension for domain-specific use cases.
  // See infra/libs/cipkg/base/actions.ActionProcessor for additional details.
  oneof spec {
    ActionCommand command = 3;
    ActionReexec reexec = 4;
    ActionURLFetch url = 5;
    ActionFilesCopy copy = 6;

    ActionCIPDExport cipd = 7;

    google.protobuf.Any extension = 99;
  }
}
